--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/material-bottom-tabs": "^5.2.16",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
+    "axios": "^0.20.0",
     "expo": "~38.0.8",
     "expo-linear-gradient": "^8.2.1",
     "expo-status-bar": "^1.0.2",
@@ -28,7 +29,8 @@
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-vector-icons": "^7.1.0",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "react-toastify": "^6.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
