--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "axios": "^0.20.0",
+    "bootstrap": "^4.5.2",
     "expo": "~38.0.8",
     "expo-linear-gradient": "^8.2.1",
     "expo-status-bar": "^1.0.2",
     "react": "~16.11.0",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-animatable": "^1.3.3",
