--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-animatable": "^1.3.3",
+    "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^4.1.0",
