--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-animatable": "^1.3.3",
     "react-native-datepicker": "^1.7.2",
+    "react-native-dropdown-picker": "^3.7.0",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^4.1.0",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
+    "react-native-select-plus": "^0.1.10",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.11.7",
     "react-toastify": "^6.0.8"
