--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-dropdown-picker": "^3.7.0",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-ionicons": "^4.6.5",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^4.1.0",
     "react-native-reanimated": "~1.9.0",
